修改公式格式

--- a/History of spaced repetition/05.1988 Two component of memory.md
+++ b/History of spaced repetition/05.1988 Two component of memory.md
@@ -96,9 +96,9 @@ A graph of actual changes in the value of the two components of memory provides 
 
 [![SuperMemo: Changes in two variables of long-term memory](../.gitbook/assets/800px-Memory_status.jpg)](https://supermemo.guru/wiki/File:Memory_status.jpg)
 
-> **Figure:** Changes in memory status over time for an exemplary piece of knowledge. The horizontal axis represents time spanning the entire repetition history. The top panel shows retrievability (tenth power, $R^{10}$, for easier analysis). Retrievability grid in gray is labelled by R=99%, R=98%, etc. The middle panel displays optimum intervals in navy. Repetition dates are marked by blue vertical lines and labelled in aqua. The end of the optimum interval where R crosses 90% line is marked by red vertical lines (only if intervals are longer than optimum intervals). The bottom panel visualizes stability (presented as $\ln(S)/\ln(days)$ for easier analysis). The graph shows that retrievability drops fast (exponentially) after early repetitions when stability is low, however, it only drops from 100% to 94% in long 10 years after the 7th review. All values are derived from an actual repetition history and the three component model of memory.
+> **Figure:** Changes in memory status over time for an exemplary piece of knowledge. The horizontal axis represents time spanning the entire repetition history. The top panel shows retrievability (tenth power, `$ R^{10} $`, for easier analysis). Retrievability grid in gray is labelled by R=99%, R=98%, etc. The middle panel displays optimum intervals in navy. Repetition dates are marked by blue vertical lines and labelled in aqua. The end of the optimum interval where R crosses 90% line is marked by red vertical lines (only if intervals are longer than optimum intervals). The bottom panel visualizes stability (presented as `$ \ln(S)/\ln(days) $` for easier analysis). The graph shows that retrievability drops fast (exponentially) after early repetitions when stability is low, however, it only drops from 100% to 94% in long 10 years after the 7th review. All values are derived from an actual repetition history and the three component model of memory.
 >
-> **图：** 记忆状态随着时间的推移而发生变化。横轴表示跨越整个重复历史的时间。顶部面板显示可提取性(十次幂，$R^{10}$，便于分析)。灰色网格的可提取性指标分别为 R=99%、R=98% 等。中间深蓝色的面板显示的最佳间隔。重复日期用蓝色竖线标记，并以浅蓝绿色标记。当 R 越过 90% 线时，最佳区间的末端用红色竖线表示(仅当区间大于最佳区间时)。下面板显示稳定性(以 $\ln(S)/\ln(days)$ 表示，便于分析)。从图中可以看出，当稳定性较低时，早期重复后的可提取性下降较快(指数级)，但在第 7 次复习后的 10 年时间里，可提取性仅从100%下降到 94%。所有的值都来自一个实际的重复历史和记忆的三组分模型。
+> **图：** 记忆状态随着时间的推移而发生变化。横轴表示跨越整个重复历史的时间。顶部面板显示可提取性(十次幂，`$ R^{10} $`，便于分析)。灰色网格的可提取性指标分别为 R=99%、R=98% 等。中间深蓝色的面板显示的最佳间隔。重复日期用蓝色竖线标记，并以浅蓝绿色标记。当 R 越过 90% 线时，最佳区间的末端用红色竖线表示(仅当区间大于最佳区间时)。下面板显示稳定性(以 `$ \ln(S)/\ln(days) $` 表示，便于分析)。从图中可以看出，当稳定性较低时，早期重复后的可提取性下降较快(指数级)，但在第 7 次复习后的 10 年时间里，可提取性仅从100%下降到 94%。所有的值都来自一个实际的重复历史和记忆的三组分模型。
 
 Due to the fact that a real-life application of [SuperMemo](https://supermemo.guru/wiki/SuperMemo) requires tackling learning material of varying difficulty, the third variable involved in the model is [item difficulty](https://supermemo.guru/wiki/Item_difficulty) (D). Some of the implications of item difficulty have also been discussed in [this article](https://supermemo.guru/wiki/History_of_spaced_repetition). In particular, the impact of composite memories with subcomponents of different memory stability (S).
 
@@ -145,13 +145,13 @@ The actual proof from my [Master's Thesis](https://supermemo.guru/wiki/Optimizat
 >
 > - A variable that plays the role of a clock that measures time between repetitions. Exemplary parameters that can be used here are:
 >
->   - $T_e$ - time that has elapsed since the last repetition (it belongs to the range <0,optimal-interval>),
->   - $T_L$ - time that has to elapse before the next repetition will take place ($T_L$=optimal-interval-$T_e$),
->   - $P_f$ - probability that the synapse will lose the trace of memory during the day in question (it belongs to the range <0,1>).
+>   - `$ T_e $` - time that has elapsed since the last repetition (it belongs to the range <0,optimal-interval>),
+>   - `$ T_L $` - time that has to elapse before the next repetition will take place (`$ T_L $`=optimal-interval-`$ T_e $`),
+>   - `$ P_f $` - probability that the synapse will lose the trace of memory during the day in question (it belongs to the range <0,1>).
 > - 起时钟作用的变量，用于测量两次重复之间的时间。这里可以使用的示例性参数包括：
->   -  $T_e$ - 自上次重复以来已经过去的时间（属于区间 <0，最佳间隔>），
->   -  $T_L$ - 在下一次重复发生之前必须经过的时间（$T_L$ = 最佳间隔 - $T_e$），
->   -  $P_f$ - 突触在有问题的一天内丢失记忆痕迹的概率（属于区间 <0，1>）。
+>   -  `$ T_e $` - 自上次重复以来已经过去的时间（属于区间 <0，最佳间隔>），
+>   -  `$ T_L $` - 在下一次重复发生之前必须经过的时间（`$ T_L $` = 最佳间隔 - `$ T_e $`），
+>   -  `$ P_f $` - 突触在有问题的一天内丢失记忆痕迹的概率（属于区间 <0，1>）。
 > - A variable that measures the durability of memory. Exemplary parameters that can be used here are:
 >
 >   - I(n+1) - optimal interval that should be used after the next repetition (I(n+1)=I(n)*C where C is a constant greater than three),
@@ -164,32 +164,32 @@ The actual proof from my [Master's Thesis](https://supermemo.guru/wiki/Optimizat
 >
 > Let us now see if the above variables are necessary and sufficient to characterize the state of synapses in the process of time-optimal learning. To show that variables are independent, we will show that none of them can be calculated from the other. Let us notice that the I(n) parameter remains constant during a given inter-repetition interval, while the Te parameter changes from zero to I(n). This shows that there is no function f that satisfies the condition:
 >
-> 现在让我们看看上述变量是否充分必要地描述突触在时间最优学习过程中的状态。为了说明变量是相互独立的，我们将说明它们之间没有一个可以相互计算。让我们注意到，在给定的重复间隔内，I(n) 参数保持不变，而 $T_e$ 参数从 0 变为 I(n)。这表明没有满足条件的函数 f：
+> 现在让我们看看上述变量是否充分必要地描述突触在时间最优学习过程中的状态。为了说明变量是相互独立的，我们将说明它们之间没有一个可以相互计算。让我们注意到，在给定的重复间隔内，I(n) 参数保持不变，而 `$ T_e $` 参数从 0 变为 I(n)。这表明没有满足条件的函数 f：
 >
-> > $T_e=f(I(n))$
+> > `$ T_e=f(I(n)) $`
 >
 > On the other hand, at the moment of subsequent repetitions, Te always equals zero while I(n) has always a different, increasing value. Therefore there is no function g that satisfies the condition:
 >
 > 另一方面，在随后的重复时刻，Te 总是等于零，而 I(n) 总是有一个不同的、递增的值。因此，不存在满足条件的函数 g：
 >
-> > $I(n)=g(T_e)$
+> > `$ I(n)=g(T_e) $`
 >
 > Hence independence of I(n) and Te.
 >
-> 因此 I(n) 和 $T_e$ 是独立的。
+> 因此 I(n) 和 `$ T_e $` 是独立的。
 >
 > To show that no other variables are necessary in the process of optimal learning, let us notice that at any given time we can compute all the moments of future repetitions using the following algorithm:
 >
 > 为了说明在最优学习过程中不需要其他变量，让我们注意到，在任何给定时间，我们都可以使用下面的算法计算未来重复的所有时刻:
 >
-> 1. Let there elapse I(n)-$T_e$ days.
+> 1. Let there elapse I(n)-`$ T_e $` days.
 > 2. Let there be a repetition.
 > 3. Let Te be zero and I(n) increase C times.
 > 4. Go to 1.
 >
-> 1. 经过 I(n)-$T_e$ 天
+> 1. 经过 I(n)-`$ T_e $` 天
 > 2. 让我们重复一遍。
-> 3. 令 $T_e$ 为零，I(n) 增加 C 倍。
+> 3. 令 `$ T_e $` 为零，I(n) 增加 C 倍。
 > 4. 回到 1。
 >
 > Note that the value of C is a constant characteristic for a given synapse and as such does not change in the process of learning. I will later use the term **retrievability** to refer to the first of the variables and the term **stability** to refer to the second one. To justify the choice of the first term, let me notice that we use to think that memories are strong after a learning task and that they fade away afterwards until they become no longer retrievable. This is retrievability that determines the moment at which memories are no longer there. It is also worth mentioning that retrievability was the variable that was tacitly assumed to be the only one needed to describe memory (as in the calpain model). The invisibility of the stability variable resulted from the fact that researchers concentrated their effort on a single learning task and observation of the follow-up changes in synapses, while the importance of stability can be visualized only in the process of repeating the same task many times. To conclude the analysis of memory variables, let us ask the standard question that must be posed in development of any biological model. What is the possible evolutionary advantage that arises from the existence of two variables of memory?
@@ -231,19 +231,19 @@ Here is an improved proof by [Murakowski](https://supermemo.guru/wiki/Janusz_Mur
 >
 > 在早期的研究中已经发现，配对联想学习中的最佳重复间隔，理解为需要最小重复次数才能无限期地保持恒定的知识保持水平(例如95%)的间隔，可以用以下公式大致表示([Wozniak 和 Gorzelanczyk，1994](https://supermemo.guru/wiki/Optimization_of_repetition_spacing_in_the_practice_of_learning))：
 >
-> - (1) $I_1=C_1$
-> - (2) $I_i=I_{i-1}*C_2$
+> - (1) `$ I_1=C_1 $`
+> - (2) `$ I_i=I_{i-1}*C_2 $`
 >
 > where:
 >
 > 这里：
 >
-> - $I_i$ - [inter-repetition interval](https://supermemo.guru/wiki/Optimum_interval) after the i-th repetition
-> - $C_1$ - length of the first interval (dependent on the chosen knowledge [retention](https://supermemo.guru/wiki/Retention), and usually equal to several days)
-> - $C_2$ - constant that denotes the increase of inter-repetition intervals in subsequent repetitions (dependent on the chosen knowledge retention, and the [difficulty](https://supermemo.guru/wiki/Difficulty) of the remembered item)
-> - $I_i$ - 第 i 次重复后的重复间隔。
-> - $C_1$ - 第一个间隔的长度(取决于所选的知识保留，通常等于几天)。
-> - $C_2$ - 常数，表示后续重复中重复间隔的增加(取决于所选的知识记忆和记忆项目的难度)
+> - `$ I_i $` - [inter-repetition interval](https://supermemo.guru/wiki/Optimum_interval) after the i-th repetition
+> - `$ C_1 $` - length of the first interval (dependent on the chosen knowledge [retention](https://supermemo.guru/wiki/Retention), and usually equal to several days)
+> - `$ C_2 $` - constant that denotes the increase of inter-repetition intervals in subsequent repetitions (dependent on the chosen knowledge retention, and the [difficulty](https://supermemo.guru/wiki/Difficulty) of the remembered item)
+> - `$ I_i $` - 第 i 次重复后的重复间隔。
+> - `$ C_1 $` - 第一个间隔的长度(取决于所选的知识保留，通常等于几天)。
+> - `$ C_2 $` - 常数，表示后续重复中重复间隔的增加(取决于所选的知识记忆和记忆项目的难度)
 >
 > The above formulae have been found for human subjects using computer optimization procedures employed to supervise the process of self-paced learning of word-pairs using the active recall drop-out technique. [...]
 >
@@ -259,20 +259,20 @@ Here is an improved proof by [Murakowski](https://supermemo.guru/wiki/Janusz_Mur
 >
 >       		*s* - length of the current optimum interval.
 >
-> 2. Just at the onset of the i-th repetition, $r=0$, while $s_i>s_i-1>0$ ($s_i$ denotes $s$ right at the onset of the i-th repetition). This indicates that there is no function $g_1$ such that $s=g_1(r)$, i.e. $s$ cannot be a function of $r$ only.
+> 2. Just at the onset of the i-th repetition, `$ r=0 $`, while `$ s_i>s_i-1>0 $` (`$ s_i $` denotes `$ s $` right at the onset of the i-th repetition). This indicates that there is no function `$ g_1 $` such that `$ s=g_1(r) $`, i.e. `$ s $` cannot be a function of `$ r $` only.
 >
-> 3. During the inter-repetition interval, $r(t_1)<>r(t_2)$ if $t_1<>t_2$ ($t$ denotes time and $r(t)$ denotes $r$ at the moment $t$). On the other hand, $s(t_1)=s(t_2)$ ($s(t)$ denotes $s$ at the moment $t$). This shows that there is no function $g_2$ such that $r=g_2(s)$, or we would have: $r(t_1)=g_2(s(t_1))=g_2(s(t_2))=r(t_2)$, which leads to a contradiction. $r$ cannot be a function of $s$ only.
+> 3. During the inter-repetition interval, `$ r(t_1)<>r(t_2) $` if `$ t_1<>t_2 $` (`$ t $` denotes time and `$ r(t) $` denotes `$ r $` at the moment `$ t $`). On the other hand, `$ s(t_1)=s(t_2) $` (`$ s(t) $` denotes `$ s $` at the moment `$ t $`). This shows that there is no function `$ g_2 $` such that `$ r=g_2(s) $`, or we would have: `$ r(t_1)=g_2(s(t_1))=g_2(s(t_2))=r(t_2) $`, which leads to a contradiction. `$ r $` cannot be a function of `$ s $` only.
 >
-> 4. In Steps 2 and 3 we have shown that $r$ and $s$ are independent, as there are no functions $g_1$ and $g_2$ such that $s=g_1(r)$ or $r=g_2(s)$. This obviously does not mean that there exists no parameter $x$ and functions $y_s$ and $y_r$ such that $s=y_s(x)$ and $r=y_r(x)$.
+> 4. In Steps 2 and 3 we have shown that `$ r $` and `$ s $` are independent, as there are no functions `$ g_1 $` and `$ g_2 $` such that `$ s=g_1(r) $` or `$ r=g_2(s) $`. This obviously does not mean that there exists no parameter `$ x $` and functions `$ y_s $` and `$ y_r $` such that `$ s=y_s(x) $` and `$ r=y_r(x) $`.
 >
-> 5. It can be shown that $r$ and $s$ suffice to compute the optimum spacing of repetitions (cf. Eqns. (1) and (2)). Let us first assume that the two following functions $f_r$ and $f_s$ are known in the system involved in memory storage: $r_i =f_r ( s_i )$ and $s_i =f_s ( s_{i-1} )$. In our case, these functions have a trivial form $f_r : r_i = s_i$ and $f_s : s_i = s_{i-1} *C_2$ (where $C_2$ is the constant from Eqn. (2)). In such a case, the variables $r$ and $s$ are sufficient to represent memory at any moment $t$ in optimum spacing of repetitions. Here is a repetition spacing algorithm which shows this to be true:
+> 5. It can be shown that `$ r $` and `$ s $` suffice to compute the optimum spacing of repetitions (cf. Eqns. (1) and (2)). Let us first assume that the two following functions `$ f_r $` and `$ f_s $` are known in the system involved in memory storage: `$ r_i =f_r ( s_i ) $` and `$ s_i =f_s ( s_{i-1} ) $`. In our case, these functions have a trivial form `$ f_r : r_i = s_i $` and `$ f_s : s_i = s_{i-1} *C_2 $` (where `$ C_2 $` is the constant from Eqn. (2)). In such a case, the variables `$ r $` and `$ s $` are sufficient to represent memory at any moment `$ t $` in optimum spacing of repetitions. Here is a repetition spacing algorithm which shows this to be true:
 >
->    1. assume that the variables $r_i$ and $s_i$ describe the state of memory after the i-th repetition
->    2. let there elapse $r_i$ time
+>    1. assume that the variables `$ r_i $` and `$ s_i $` describe the state of memory after the i-th repetition
+>    2. let there elapse `$ r_i $` time
 >    3. let there be a repetition
->    4. let the function $f_s$ be used to compute the new value of $s_{i+1}$ from $s_i$
->    5. let the function $f_r$ be used to compute the new value of $r_{i+1}$ from $s_{i+1}$
->    6. $i:=i+1$
+>    4. let the function `$ f_s $` be used to compute the new value of `$ s_{i+1} $` from `$ s_i $`
+>    5. let the function `$ f_r $` be used to compute the new value of `$ r_{i+1} $` from `$ s_{i+1} $`
+>    6. `$ i:=i+1 $`
 >    7. goto 2
 
 > 1. 我们想要确定存储记忆痕迹所涉及的(分子)变量集，这些变量足以说明最佳重复间隔。首先，让我们假设这些变量在学习中的两个相关性，它们受制于公式(1)及(2)所表示的最佳间距：
@@ -281,20 +281,20 @@ Here is an improved proof by [Murakowski](https://supermemo.guru/wiki/Janusz_Mur
 >
 >       		s - 当前最佳间隔的长度。
 >
-> 2. 仅在第 i 次重复开始时，$r=0$，而 $s_i>s_i-1>0$ ($s_i$ 表示正好在第 i 次重复开始时的 $s$)。这表明没有函数 $g_1$ 使得 $s=g_1(R)$，即 $s$ 不能只是 $r$ 的函数。
+> 2. 仅在第 i 次重复开始时，`$ r=0 $`，而 `$ s_i>s_i-1>0 $` (`$ s_i $` 表示正好在第 i 次重复开始时的 `$ s $`)。这表明没有函数 `$ g_1 $` 使得 `$ s=g_1(R) $`，即 `$ s $` 不能只是 `$ r $` 的函数。
 >
-> 3. 在重复间隔期间，$r(t_1)<>r(t_2)$ 当 $t_1<>t_2$ ($t$ 表示时间，$r(t)$ 表示时刻 $t$)。另一方面，$s(t_1)=s(t_2)$ ($s(t)$ 表示此时的 $s$)。这表明不存在函数 $g_2$ 使得 $r=g_2(s)$，否则我们将有：$r(t_1)=g_2(s(t_1))=g_2(s(t_2))=r(t_2)$，这导致了一个矛盾。$r$ 不能仅是 $s$ 的函数。
+> 3. 在重复间隔期间，`$ r(t_1)<>r(t_2) $` 当 `$ t_1<>t_2 $` (`$ t $` 表示时间，`$ r(t) $` 表示时刻 `$ t $`)。另一方面，`$ s(t_1)=s(t_2) $` (`$ s(t) $` 表示此时的 `$ s $`)。这表明不存在函数 `$ g_2 $` 使得 `$ r=g_2(s) $`，否则我们将有：`$ r(t_1)=g_2(s(t_1))=g_2(s(t_2))=r(t_2) $`，这导致了一个矛盾。`$ r $` 不能仅是 `$ s $` 的函数。
 >
-> 4. 在步骤 2 和 3 中，我们已经证明了 $r$ 和 $s$ 是独立的，因为没有函数 $g_1$ 和 $g_2$ 使得 $s=g_1(r)$ 或 $r=g_2(s)$。这显然不意味着没有参数 $x$ 和函数 $y_s$ 和 $y_r$ 使得 $s=y_s(x)$ 和 $r=y_r(x)$。
+> 4. 在步骤 2 和 3 中，我们已经证明了 `$ r $` 和 `$ s $` 是独立的，因为没有函数 `$ g_1 $` 和 `$ g_2 $` 使得 `$ s=g_1(r) $` 或 `$ r=g_2(s) $`。这显然不意味着没有参数 `$ x $` 和函数 `$ y_s $` 和 `$ y_r $` 使得 `$ s=y_s(x) $` 和 `$ r=y_r(x) $`。
 >
-> 5. 可以看出，$r$ 和 $s$ 足以计算最佳重复间隔(参见方程式(1)及(2))。让我们首先假设以下两个函数 $f_r$ 和 $f_s$ 在s涉及记忆存储i的系统中是已知的：$r_i=f_r(s_i)$ 和 $s_i=f_s(s_{i-1})$。在我们的例子中，这些函数具有平凡的形式 $f_r：r_i=s_i$ 和 $f_s：s_i=s_{i-1}*C_2$ (其中 $C_2$ 是公式中的常量。(2)。在这种情况下，变量 $r$ 和 $s$ 足以在任何时刻 $t$ 以最佳重复间隔表示记忆。以下是重复间隔算法，它表明这是正确的：
+> 5. 可以看出，`$ r $` 和 `$ s $` 足以计算最佳重复间隔(参见方程式(1)及(2))。让我们首先假设以下两个函数 `$ f_r $` 和 `$ f_s $` 在s涉及记忆存储i的系统中是已知的：`$ r_i=f_r(s_i) $` 和 `$ s_i=f_s(s_{i-1}) $`。在我们的例子中，这些函数具有平凡的形式 `$ f_r：r_i=s_i $` 和 `$ f_s：s_i=s_{i-1}*C_2 $` (其中 `$ C_2 $` 是公式中的常量。(2)。在这种情况下，变量 `$ r $` 和 `$ s $` 足以在任何时刻 `$ t $` 以最佳重复间隔表示记忆。以下是重复间隔算法，它表明这是正确的：
 >
->    1. 假设变量 $r_i$ 和 $s_i$ 描述第 i 次重复后的记忆状态
->    2. 时间流逝 $r_i$
+>    1. 假设变量 `$ r_i $` 和 `$ s_i $` 描述第 i 次重复后的记忆状态
+>    2. 时间流逝 `$ r_i $`
 >    3. 开始重复
->    4. 让函数 $f_s$ 用于从 $s_i$ 计算新值 $s_{i+1}$
->    5. 让函数 $f_r$ 用于从 $s_{i+1}$ 计算新值 $r_{i+1}$
->    6. $i:=i+1$
+>    4. 让函数 `$ f_s $` 用于从 `$ s_i $` 计算新值 `$ s_{i+1} $`
+>    5. 让函数 `$ f_r $` 用于从 `$ s_{i+1} $` 计算新值 `$ r_{i+1} $`
+>    6. `$ i:=i+1 $`
 >    7. 回到 2
 >    
 >
@@ -310,27 +310,27 @@ Here is an improved proof by [Murakowski](https://supermemo.guru/wiki/Janusz_Mur
 >
 > 假设可提取性以负指数下降，并将稳定性解释为可提取性衰减常数的倒数，我们可以方便地使用以下公式(t 表示时间)来表示 R 和 S 之间的关系：
 >
->   > (3) $R=e^{-t/S}$
+>   > (3) `$ R=e^{-t/S} $`
 >
 > The transformation functions from the pair *r*-*s* used in Steps 1-5 of the reasoning, to the proposed interpretation R-S will look as follows (assuming the definition of the optimum inter-repetition interval as the interval that produces retention of knowledge K=0.95):
 >
 > 从推理的步骤 1-5 中使用的 r-s 对到建议的解释 R-S 的变换函数如下(假设最佳重复间隔的定义为产生知识保持的间隔 K=0.95)：
 >
->   > (4) $S=-s/\ln(K)$
+>   > (4) `$ S=-s/\ln(K) $`
 > >
->    > (5) $R=e^{-(s-r)/S}$
+>    > (5) `$ R=e^{-(s-r)/S} $`
 >
-> The relationship between the stability after the i-th repetition ($S_i$) and the constants $C_1$ and $C_2$ determining the optimum spacing of repetitions as defined by Eqns. (1) and (2) can therefore be written as:
+> The relationship between the stability after the i-th repetition (`$ S_i $`) and the constants `$ C_1 $` and `$ C_2 $` determining the optimum spacing of repetitions as defined by Eqns. (1) and (2) can therefore be written as:
 >
-> 因此，第 i 次重复后的稳定性($S_i$)与确定由公式(1)和(2)定义的最佳重复间隔的常数 $C_1$ 和 $C_2$ 之间的关系可以写成：
+> 因此，第 i 次重复后的稳定性(`$ S_i $`)与确定由公式(1)和(2)定义的最佳重复间隔的常数 `$ C_1 $` 和 `$ C_2 $` 之间的关系可以写成：
 >
->    > (6) $S_i=-(C_1*C_2^{i-1})/\ln(K)$
+>    > (6) `$ S_i=-(C_1*C_2^{i-1})/\ln(K) $`
 >
 > and finally, retrievability in the optimum spacing of repetitions can be expressed as:
 >
 > 最后，在最佳重复间隔中的可提取性可以表示为：
 >
->    > (7) $R_i(t)=\exp^{(t*\ln(K)/(C_1*C_2^{i-1}))}$
+>    > (7) `$ R_i(t)=\exp^{(t*\ln(K)/(C_1*C_2^{i-1}))} $`
 >    >
 >    > where:
 >    >
@@ -338,54 +338,54 @@ Here is an improved proof by [Murakowski](https://supermemo.guru/wiki/Janusz_Mur
 >    >
 >    > - i - number of the repetition in question
 >    > - t - time since the i-th repetition
->    > - $R_i(t)$ - retrievability after the time t passing since the i-th repetition in optimum spacing of repetitions
->    > - $C_1$ and $C_2$ - constants from Eqns. (1) and (2)
+>    > - `$ R_i(t) $` - retrievability after the time t passing since the i-th repetition in optimum spacing of repetitions
+>    > - `$ C_1 $` and `$ C_2 $` - constants from Eqns. (1) and (2)
 >    > - K - retention of knowledge equal to 0.95 (it is important to notice that the relationship expressed by Eqn. (7) may not be true for retention higher than 0.95 due to the spacing effect resulting from shorter intervals)
 >    > - i - 问题的重复次数
 >    > - t - 从第 i 次重复开始的时间
->    > - $R_i(t)$ - 自第 i 次重复以来经过时间  t 之后的最佳重复间隔的可提取性
->    > - $C_1$ 和 $C_2$ - 来自公式(1)和(2)的常量。
+>    > - `$ R_i(t) $` - 自第 i 次重复以来经过时间  t 之后的最佳重复间隔的可提取性
+>    > - `$ C_1 $` 和 `$ C_2 $` - 来自公式(1)和(2)的常量。
 >    > - K-知识保留量等于 0.95(重要的 是要注意由公式(7)表示的关系。由于较短间隔产生的间距效应，保留率高于 0.95 的情况可能不成立)
 
 ## Two components of memory in SuperMemo
 
 ## SuperMemo 中的记忆的两个组成成分
 
-[SuperMemo](https://supermemo.guru/wiki/SuperMemo) has always been based on the [two component model of memory](https://supermemo.guru/wiki/Two_component_model_of_memory), which emerged in an increasingly explicit form over the last three decades. The constant $C_2$ in Eqn. (2) in Murakowski proof above represents [stability increase](https://supermemo.guru/wiki/Stability_increase). In 2018, stability increase is represented in [SuperMemo](https://supermemo.guru/wiki/SuperMemo) as matrix *SInc[]*. $C_2$ says how much inter-repetition intervals should increase in learning to meet the criteria of admissible level of forgetting. In reality, $C_2$ is not a constant. It depends on a number of factors. Of these, the most important are:
+[SuperMemo](https://supermemo.guru/wiki/SuperMemo) has always been based on the [two component model of memory](https://supermemo.guru/wiki/Two_component_model_of_memory), which emerged in an increasingly explicit form over the last three decades. The constant `$ C_2 $` in Eqn. (2) in Murakowski proof above represents [stability increase](https://supermemo.guru/wiki/Stability_increase). In 2018, stability increase is represented in [SuperMemo](https://supermemo.guru/wiki/SuperMemo) as matrix *SInc[]*. `$ C_2 $` says how much inter-repetition intervals should increase in learning to meet the criteria of admissible level of forgetting. In reality, `$ C_2 $` is not a constant. It depends on a number of factors. Of these, the most important are:
 
-SuperMemo 一直基于记忆的双组分模型，该模型在过去 30 年中以越来越明显的形式出现。公式(2) 中的常数 $C_2$ 在 Murakowski 的上述证明中表示稳定性增加。2018 年，稳定性增加在 SuperMemo 中表示为矩阵 SInc[]。$C_2$ 说明在学习中应该增加多少重复间隔，才能达到可接受的遗忘水平标准。实际上，$C_2$ 不是常数。这取决于许多因素。其中，最重要的是：
+SuperMemo 一直基于记忆的双组分模型，该模型在过去 30 年中以越来越明显的形式出现。公式(2) 中的常数 `$ C_2 $` 在 Murakowski 的上述证明中表示稳定性增加。2018 年，稳定性增加在 SuperMemo 中表示为矩阵 SInc[]。`$ C_2 $` 说明在学习中应该增加多少重复间隔，才能达到可接受的遗忘水平标准。实际上，`$ C_2 $` 不是常数。这取决于许多因素。其中，最重要的是：
 
-- item difficulty (D)(see: [complexity](https://supermemo.guru/wiki/Complexity)): the more difficult the remembered piece of information the smaller the $C_2$ (i.e. difficult material must be reviewed more often)
-- [memory stability](https://supermemo.guru/wiki/Memory_stability) (S): the more lasting/durable the memory, the smaller the $C_2$ value
-- probability of recall ([retrievability](https://supermemo.guru/wiki/Retrievability))(R): the lower the probability of recall, the higher the $C_2$ value (i.e. due to the [spacing effect](https://supermemo.guru/wiki/Spacing_effect), items are remembered better if reviewed with delay)
+- item difficulty (D)(see: [complexity](https://supermemo.guru/wiki/Complexity)): the more difficult the remembered piece of information the smaller the `$ C_2 $` (i.e. difficult material must be reviewed more often)
+- [memory stability](https://supermemo.guru/wiki/Memory_stability) (S): the more lasting/durable the memory, the smaller the `$ C_2 $` value
+- probability of recall ([retrievability](https://supermemo.guru/wiki/Retrievability))(R): the lower the probability of recall, the higher the `$ C_2 $` value (i.e. due to the [spacing effect](https://supermemo.guru/wiki/Spacing_effect), items are remembered better if reviewed with delay)
 
-- 项目难度(D)(参见：复杂性)：记住的信息越难，$C_2$ 越小(即必须更频繁地复习困难的材料)
-- [记忆稳定性](https://supermemo.guru/wiki/Memory_stability) (S)：记忆越持久，$C_2$ 值越小
-- 回忆概率([可提取性](https://supermemo.guru/wiki/Retrievability))(R)：回忆的概率越低，$C_2$ 值越高(即由于[间隔效应](https://supermemo.guru/wiki/Spacing_effect)，如果延迟查看项目，可以更好地记住它们)
+- 项目难度(D)(参见：复杂性)：记住的信息越难，`$ C_2 $` 越小(即必须更频繁地复习困难的材料)
+- [记忆稳定性](https://supermemo.guru/wiki/Memory_stability) (S)：记忆越持久，`$ C_2 $` 值越小
+- 回忆概率([可提取性](https://supermemo.guru/wiki/Retrievability))(R)：回忆的概率越低，`$ C_2 $` 值越高(即由于[间隔效应](https://supermemo.guru/wiki/Spacing_effect)，如果延迟查看项目，可以更好地记住它们)
 
-Due to those multiple dependencies, the precise value of $C_2$ is not easily predictable. SuperMemo solves this and similar optimization problems by using multidimensional matrices to represent multi-argument functions and adjusting the value of those matrices on the basis of measurements made during an actual learning process. The initial values of those matrices are derived from a theoretical model or from previous measurements. The actually used values will, over time, differ slightly from those theoretically predicted or those derived from data of previous students.
+Due to those multiple dependencies, the precise value of `$ C_2 $` is not easily predictable. SuperMemo solves this and similar optimization problems by using multidimensional matrices to represent multi-argument functions and adjusting the value of those matrices on the basis of measurements made during an actual learning process. The initial values of those matrices are derived from a theoretical model or from previous measurements. The actually used values will, over time, differ slightly from those theoretically predicted or those derived from data of previous students.
 
-由于这些多重依赖关系，$C_2$ 的精确值不容易预测。SuperMemo 通过使用多维矩阵来表示多自变量函数，并根据在实际学习过程中所做的测量来调整这些矩阵的值，从而解决了这个和类似的优化问题。这些矩阵的初始值是从理论模型或从先前的测量中导出的。随着时间的推移，实际使用的值将与理论预测的值或根据以前学生的数据得出的值略有不同。
+由于这些多重依赖关系，`$ C_2 $` 的精确值不容易预测。SuperMemo 通过使用多维矩阵来表示多自变量函数，并根据在实际学习过程中所做的测量来调整这些矩阵的值，从而解决了这个和类似的优化问题。这些矩阵的初始值是从理论模型或从先前的测量中导出的。随着时间的推移，实际使用的值将与理论预测的值或根据以前学生的数据得出的值略有不同。
 
-For example, if the value of $C_2$ for a given item of a given difficulty with a given memory status produces an inter-repetition interval that is longer than desired (i.e. producing lower than desired level of recall), the value of $C_2$ is reduced accordingly.
+For example, if the value of `$ C_2 $` for a given item of a given difficulty with a given memory status produces an inter-repetition interval that is longer than desired (i.e. producing lower than desired level of recall), the value of `$ C_2 $` is reduced accordingly.
 
-例如，如果给定难度、给定记忆状态的给定项的 $C_2$ 值产生的重复间隔比期望的间隔长(即产生的回忆率低于期望的水平)，则 $C_2$ 值相应减少。
+例如，如果给定难度、给定记忆状态的给定项的 `$ C_2 $` 值产生的重复间隔比期望的间隔长(即产生的回忆率低于期望的水平)，则 `$ C_2 $` 值相应减少。
 
-Here is the evolution of [stability increase](https://supermemo.guru/wiki/Stability_increase) (constant $C_2$) over years:
+Here is the evolution of [stability increase](https://supermemo.guru/wiki/Stability_increase) (constant `$ C_2 $`) over years:
 
-以下是[稳定性增加](https://supermemo.guru/wiki/Stability_increase )(常数 $C_2$)多年来的演变：
+以下是[稳定性增加](https://supermemo.guru/wiki/Stability_increase )(常数 `$ C_2 $`)多年来的演变：
 
-- in the paper-and-pencil version of SuperMemo (1985), $C_2$ was indeed (almost) a constant. Set at the average of 1.75 (varying from 1.5 to 2.0 for rounding errors and simplicity), it did not consider [material difficulty](https://supermemo.guru/wiki/Difficulty), [stability](https://supermemo.guru/wiki/Stability) or [retrievability](https://supermemo.guru/wiki/Retrievability) of memories, etc.
-- 在纸笔版本的 SuperMemo(1985) 中，$C_2$ 确实(几乎)是一个常数。设置为平均 1.75 (为了舍入误差和简单性，从 1.5 到 2.0 不等)，没有考虑材料难度、稳定性或记忆的可提取性等。
-- in early versions of [SuperMemo for DOS](https://supermemo.guru/wiki/SuperMemo_for_DOS) (1987), $C_2$, named [E-Factor](https://supermemo.guru/wiki/E-Factor), reflected [item difficulty](https://supermemo.guru/wiki/Difficulty) for the first time. It was decreased for bad grades and increased for good grades
-- 在 [SuperMemo for DOS](https://supermemo.guru/wiki/SuperMemo_for_DOS)(1987) 的早期版本中，$C_2$ (命名为 E-因子)首次反映了项目难度。成绩不好时降低，成绩好时增加。
-- SuperMemo 4 (1989) did not use $C_2$, but, to compute inter-repetition intervals, it employed optimization matrices for the first time
-- SuperMemo 4(1989) 没有使用 $C_2$，但是为了计算重复间隔，它第一次使用了优化矩阵
-- in [SuperMemo 5](https://supermemo.guru/wiki/SuperMemo_5) (1990), $C_2$, named [O-Factor](https://supermemo.guru/wiki/O-Factor) was finally represented as a matrix and it included both the [difficulty](https://supermemo.guru/wiki/Difficulty) dimension as well as the [stability](https://supermemo.guru/wiki/Stability) dimension. Again, entries of the matrix would be subject to the measure-verify-correct cycle that would, starting with the initial value based on prior measurements, produce a convergence towards the value that would satisfy the learning criteria
-- 在 [SuperMemo 5](https://supermemo.guru/wiki/SuperMemo_5) (1990) 中，$C_2$ (命名为 O-因子)最终被表示为一个矩阵，它既包括难度维度，也包括稳定性维度。同样，矩阵的条目将受到测量-验证-校正循环的影响，该循环将从基于先前测量的初始值开始，产生向满足学习标准的值的收敛
-- in [SuperMemo 6](https://supermemo.guru/wiki/SuperMemo_6) (1991), $C_2$ in the form of the [O-Factor matrix](https://supermemo.guru/wiki/O-Factor_matrix) would be derived from a three-dimensional matrix that would include the [retrievability](https://supermemo.guru/wiki/Retrievability) dimension. The important implication of the third dimension was that, for the first time, [SuperMemo](https://supermemo.guru/wiki/SuperMemo) would make it possible to inspect [forgetting curves](https://supermemo.guru/wiki/Forgetting_curve) for different levels of [difficulty](https://supermemo.guru/wiki/Difficulty) and [memory stability](https://supermemo.guru/wiki/Stability)
-- 在 [SuperMemo 6](https://supermemo.guru/wiki/SuperMemo_6)(1991) 中，$C_2$ 以 [O-因子矩阵](https://supermemo.guru/wiki/O-Factor_matrix)的形式派生自一个包含可提取性维度的三维矩阵。第三维度的重要意义是，[SuperMemo](https://supermemo.guru/wiki/SuperMemo) 第一次使检查不同难度和记忆稳定性的遗忘曲线成为可能
-- in [SuperMemo 8](https://supermemo.guru/wiki/SuperMemo_8) (1997) through [SuperMemo 16](http://www.super-memo.com/supermemo16.html), the representation of $C_2$ would not change much, however, the algorithm used to produce a quick and stable transition from the theoretical to the real set of data would gradually get more and more complex. Most importantly, new SuperMemos make a better use of the [retrievability](https://supermemo.guru/wiki/Retrievability) dimension of $C_2$. Thus, independent of the [spacing effect](https://supermemo.guru/wiki/Spacing_effect), the student can depart from the initial learning criteria, e.g. to cram before an exam, without introducing noise into the optimization procedure
-- 在 [SuperMemo 8](https://supermemo.guru/wiki/SuperMemo_8)(1997) 到 [SuperMemo 16](http://www.super-memo.com/supermemo16.html) 中，$C_2$ 的表示没有有太大变化，但是，用于产生从理论数据到真实数据的快速而稳定的转换的算法将逐渐变得越来越复杂。最重要的是，新的 SuperMemo 更好地利用了 $C_2$ 的可提取性性维度。因此，与间隔效应无关，学生可以偏离初始学习标准，例如在考试前临时抱佛脚，而不会在优化过程中引入噪声
-- in [SuperMemo 17](https://supermemo.guru/wiki/SuperMemo_17) (2016), $C_2$ finally took the form based on the original [two component model of memory](https://supermemo.guru/wiki/Two_component_model_of_memory). It is taken from [stability increase](https://supermemo.guru/wiki/Stability_increase) matrix (SInc) that has three dimensions that represent the three variables that determine the increase in stability: [complexity](https://supermemo.guru/wiki/Complexity), [stability](https://supermemo.guru/wiki/Stability) and [retrievability](https://supermemo.guru/wiki/Retrievability). The SInc matrix is filled up with data during learning using a complex algorithm known as [Algorithm SM-17](https://supermemo.guru/wiki/Algorithm_SM-17). The stability increase matrix can be inspected in SuperMemo 17 with **Tools : Memory : 4D Graphs** (**Stability** tab)
-- 在 [SuperMemo 17](https://supermemo.guru/wiki/SuperMemo_17) (2016) 中，$C_2$ 最终采取了基于最初的记忆双组分模型的形式。它取自稳定性增加矩阵(SInc)，该矩阵具有三个维度，表示决定稳定性增加的三个变量：复杂性、稳定性和可提取性。在使用称为算法 SM-17 的复杂算法学习期间用数据填充 SInc 矩阵。可使用 **Tools：Memory：4D Graphs** (**稳定性** 选项卡)在 SuperMemo 17 中检查稳定性增加矩阵。
+- in the paper-and-pencil version of SuperMemo (1985), `$ C_2 $` was indeed (almost) a constant. Set at the average of 1.75 (varying from 1.5 to 2.0 for rounding errors and simplicity), it did not consider [material difficulty](https://supermemo.guru/wiki/Difficulty), [stability](https://supermemo.guru/wiki/Stability) or [retrievability](https://supermemo.guru/wiki/Retrievability) of memories, etc.
+- 在纸笔版本的 SuperMemo(1985) 中，`$ C_2 $` 确实(几乎)是一个常数。设置为平均 1.75 (为了舍入误差和简单性，从 1.5 到 2.0 不等)，没有考虑材料难度、稳定性或记忆的可提取性等。
+- in early versions of [SuperMemo for DOS](https://supermemo.guru/wiki/SuperMemo_for_DOS) (1987), `$ C_2 $`, named [E-Factor](https://supermemo.guru/wiki/E-Factor), reflected [item difficulty](https://supermemo.guru/wiki/Difficulty) for the first time. It was decreased for bad grades and increased for good grades
+- 在 [SuperMemo for DOS](https://supermemo.guru/wiki/SuperMemo_for_DOS)(1987) 的早期版本中，`$ C_2 $` (命名为 E-因子)首次反映了项目难度。成绩不好时降低，成绩好时增加。
+- SuperMemo 4 (1989) did not use `$ C_2 $`, but, to compute inter-repetition intervals, it employed optimization matrices for the first time
+- SuperMemo 4(1989) 没有使用 `$ C_2 $`，但是为了计算重复间隔，它第一次使用了优化矩阵
+- in [SuperMemo 5](https://supermemo.guru/wiki/SuperMemo_5) (1990), `$ C_2 $`, named [O-Factor](https://supermemo.guru/wiki/O-Factor) was finally represented as a matrix and it included both the [difficulty](https://supermemo.guru/wiki/Difficulty) dimension as well as the [stability](https://supermemo.guru/wiki/Stability) dimension. Again, entries of the matrix would be subject to the measure-verify-correct cycle that would, starting with the initial value based on prior measurements, produce a convergence towards the value that would satisfy the learning criteria
+- 在 [SuperMemo 5](https://supermemo.guru/wiki/SuperMemo_5) (1990) 中，`$ C_2 $` (命名为 O-因子)最终被表示为一个矩阵，它既包括难度维度，也包括稳定性维度。同样，矩阵的条目将受到测量-验证-校正循环的影响，该循环将从基于先前测量的初始值开始，产生向满足学习标准的值的收敛
+- in [SuperMemo 6](https://supermemo.guru/wiki/SuperMemo_6) (1991), `$ C_2 $` in the form of the [O-Factor matrix](https://supermemo.guru/wiki/O-Factor_matrix) would be derived from a three-dimensional matrix that would include the [retrievability](https://supermemo.guru/wiki/Retrievability) dimension. The important implication of the third dimension was that, for the first time, [SuperMemo](https://supermemo.guru/wiki/SuperMemo) would make it possible to inspect [forgetting curves](https://supermemo.guru/wiki/Forgetting_curve) for different levels of [difficulty](https://supermemo.guru/wiki/Difficulty) and [memory stability](https://supermemo.guru/wiki/Stability)
+- 在 [SuperMemo 6](https://supermemo.guru/wiki/SuperMemo_6)(1991) 中，`$ C_2 $` 以 [O-因子矩阵](https://supermemo.guru/wiki/O-Factor_matrix)的形式派生自一个包含可提取性维度的三维矩阵。第三维度的重要意义是，[SuperMemo](https://supermemo.guru/wiki/SuperMemo) 第一次使检查不同难度和记忆稳定性的遗忘曲线成为可能
+- in [SuperMemo 8](https://supermemo.guru/wiki/SuperMemo_8) (1997) through [SuperMemo 16](http://www.super-memo.com/supermemo16.html), the representation of `$ C_2 $` would not change much, however, the algorithm used to produce a quick and stable transition from the theoretical to the real set of data would gradually get more and more complex. Most importantly, new SuperMemos make a better use of the [retrievability](https://supermemo.guru/wiki/Retrievability) dimension of `$ C_2 $`. Thus, independent of the [spacing effect](https://supermemo.guru/wiki/Spacing_effect), the student can depart from the initial learning criteria, e.g. to cram before an exam, without introducing noise into the optimization procedure
+- 在 [SuperMemo 8](https://supermemo.guru/wiki/SuperMemo_8)(1997) 到 [SuperMemo 16](http://www.super-memo.com/supermemo16.html) 中，`$ C_2 $` 的表示没有有太大变化，但是，用于产生从理论数据到真实数据的快速而稳定的转换的算法将逐渐变得越来越复杂。最重要的是，新的 SuperMemo 更好地利用了 `$ C_2 $` 的可提取性性维度。因此，与间隔效应无关，学生可以偏离初始学习标准，例如在考试前临时抱佛脚，而不会在优化过程中引入噪声
+- in [SuperMemo 17](https://supermemo.guru/wiki/SuperMemo_17) (2016), `$ C_2 $` finally took the form based on the original [two component model of memory](https://supermemo.guru/wiki/Two_component_model_of_memory). It is taken from [stability increase](https://supermemo.guru/wiki/Stability_increase) matrix (SInc) that has three dimensions that represent the three variables that determine the increase in stability: [complexity](https://supermemo.guru/wiki/Complexity), [stability](https://supermemo.guru/wiki/Stability) and [retrievability](https://supermemo.guru/wiki/Retrievability). The SInc matrix is filled up with data during learning using a complex algorithm known as [Algorithm SM-17](https://supermemo.guru/wiki/Algorithm_SM-17). The stability increase matrix can be inspected in SuperMemo 17 with **Tools : Memory : 4D Graphs** (**Stability** tab)
+- 在 [SuperMemo 17](https://supermemo.guru/wiki/SuperMemo_17) (2016) 中，`$ C_2 $` 最终采取了基于最初的记忆双组分模型的形式。它取自稳定性增加矩阵(SInc)，该矩阵具有三个维度，表示决定稳定性增加的三个变量：复杂性、稳定性和可提取性。在使用称为算法 SM-17 的复杂算法学习期间用数据填充 SInc 矩阵。可使用 **Tools：Memory：4D Graphs** (**稳定性** 选项卡)在 SuperMemo 17 中检查稳定性增加矩阵。
