修正图片显示

--- a/History of spaced repetition/04.1987 SuperMemo 1.0 for DOS.md
+++ b/History of spaced repetition/04.1987 SuperMemo 1.0 for DOS.md
@@ -103,7 +103,7 @@ By Dec 23, 1987, my combined paper and [computer databases](https://supermemo.gu
 
 到了 1987 年 12 月 23 日，我的论文和[计算机数据库](https://supermemo.guru/wiki/Collection)包含了 3795 个关于人类生物学的问题(其中近 10% 已经存储在我新的 [SuperMemo](https://supermemo.guru/wiki/SuperMemo) 程序数据库中)。遗憾的是，那天我不得不从 SuperMemo 中删除存储完整重复历史的可能性。在 360K 的磁盘上没有足够的空间。间隔重复研究需要再等几年。直到 1996 年，SuperMemo 才重新开始收集重复次数的完整记录。
 
-![SuperMemo 1.0 for DOS](../.gitbook/assets/800px-SuperMemo_1_for_DOS_\(in_black_and_white\).jpg)
+![SuperMemo 1.0 for DOS](../.gitbook/assets/SuperMemo_1_for_DOS.jpg)
 
 > **Figure:** SuperMemo 1.0 for DOS (1987) was the first computer application of spaced repetition. It introduced Algorithm SM-2 that remains popular three decades later
 >
