--- a/History of spaced repetition/03.1986 First steps of SuperMemo.md
+++ b/History of spaced repetition/03.1986 First steps of SuperMemo.md
@@ -224,7 +224,7 @@ When the [forgetting index](https://supermemo.guru/wiki/Forgetting_index) drops 
 
 当[遗忘系数](https://supermemo.guru/wiki/Forgetting_index)降到 5% 以下时，重复学习负荷会迅速增加(见上图)。在学习实践中，遗忘系数的推荐值为 6-14%。
 
-[![Trade-off between the knowledge retention (../.gitbook/assets/Knowledge_retention_vs_workload.gif) and the workload (number of repetitions of an average item in 10,000 days)](https://supermemo.guru/images/5/5a/Knowledge_retention_vs_workload.gif)](https://supermemo.guru/wiki/File:Knowledge_retention_vs_workload.gif)
+![Trade-off between the knowledge retention](../.gitbook/assets/Knowledge_retention_vs_workload.gif)
 
 > **Figure:** Trade-off between the knowledge retention (forgetting index) and the workload (number of repetitions of an average item in 10,000 days).
 >
